Reģistrācija nesūta datus uz API

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -62,6 +62,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.actionbarsherlock.app.SherlockActivity" />
         </activity>
+        
+        <activity
+            android:name="lv.lu.locationsharing.SignUpActivity"
+            android:label="@string/app_name" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.actionbarsherlock.app.SherlockActivity" />
+        </activity>
 
         <service
             android:name="com.octo.android.robospice.JacksonSpringAndroidSpiceService"
