--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,7 +29,7 @@
     <application
         android:name="lv.lu.locationsharing.application.LocationApplication"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/lsicon"
         android:label="@string/app_name"
         android:theme="@style/Theme.Sherlock" >
         <meta-data
@@ -41,7 +41,7 @@
 
         <activity
             android:name="lv.lu.locationsharing.LoginActivity"
-            android:label="@string/title_activity_login"
+            android:label="@string/app_name"
             android:parentActivityName="com.actionbarsherlock.app.SherlockActivity"
             android:windowSoftInputMode="adjustResize|stateVisible" >
             <intent-filter>
